--- a/notebooks/IMDB_reviews_Sentiment_analysis_LSTM.ipynb
+++ b/notebooks/IMDB_reviews_Sentiment_analysis_LSTM.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOkaG8+KfmY36+VK66F2xMg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,7 +54,7 @@
       "metadata": {
         "id": "_FHZW0gWDZw3"
       },
-      "execution_count": 20,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -69,8 +68,33 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ep0Y2ksT8vOE",
+        "outputId": "08192240-5289-498a-8b98-7485009b38c8"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ],
       "source": [
-        "data = pd.read_csv('/content/IMDB_Dataset.csv')\n",
+        "# mounting drive\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data = pd.read_csv('/content/drive/MyDrive/data/IMDB_Dataset.csv')\n",
         "print(data.shape)\n",
         "print(data.head())\n",
         "print(data.tail())\n",
@@ -82,9 +106,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iI_ekXjJG-DN",
-        "outputId": "d5c879ce-6b1e-492a-f0dd-f7518b764c10"
+        "outputId": "d0d7e789-67b0-406c-99e9-cb1bc2f4e2c3"
       },
-      "execution_count": 21,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -122,12 +146,12 @@
       ],
       "metadata": {
         "id": "dBd6aGJKJ38a",
-        "outputId": "7ec1c17b-3368-40ba-ca0b-ebf938819b89",
+        "outputId": "5557f39f-8b8d-4f69-d1cc-fff3a2ea8b35",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -158,12 +182,12 @@
       ],
       "metadata": {
         "id": "zmRTk2XBKx2T",
-        "outputId": "eb11aa8e-925f-40e8-b0b4-593be46b9150",
+        "outputId": "cf55e0ec-2c58-4f79-9c76-d4ec367824ad",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -206,19 +230,19 @@
       ],
       "metadata": {
         "id": "Yuo501bARfSb",
-        "outputId": "340b9435-f0f1-4fc7-f9ae-fe989801b82c",
+        "outputId": "c5acb107-124c-497f-d9d9-4b845179f791",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
             "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-            "[nltk_data]   Package stopwords is already up-to-date!\n"
+            "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
           ]
         },
         {
@@ -256,12 +280,12 @@
       ],
       "metadata": {
         "id": "B40kiBq4Li75",
-        "outputId": "08fc84b1-5d13-4ca1-9330-dba4ed3078b7",
+        "outputId": "010d9e81-fe25-4298-b2f0-fd8e951aab16",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -296,12 +320,12 @@
       ],
       "metadata": {
         "id": "LxwqXDoIO2fM",
-        "outputId": "57ffa525-7bca-4afe-f396-c16e1ba47b43",
+        "outputId": "d36d972c-ab12-4816-ff85-94ed5dc43be0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -336,13 +360,368 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "**LSTM - Long Short-Term Memory**"
+      ],
       "metadata": {
-        "id": "W7fgzv9QO-7o"
+        "id": "bNyk-NJf5p9q"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# build the model\n",
+        "\n",
+        "model = Sequential()\n",
+        "model.add(Embedding(input_dim=5000, output_dim=128, input_length=200))\n",
+        "model.add(LSTM(128, dropout=0.2, recurrent_dropout=0.2))\n",
+        "model.add(Dense(1, activation=\"sigmoid\"))"
+      ],
+      "metadata": {
+        "id": "W7fgzv9QO-7o",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d67ec65e-07a1-4a2c-f014-01fbecceb112"
       },
-      "execution_count": 26,
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.12/dist-packages/keras/src/layers/core/embedding.py:97: UserWarning: Argument `input_length` is deprecated. Just remove it.\n",
+            "  warnings.warn(\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.summary()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 255
+        },
+        "id": "ZxD2GMigFFZm",
+        "outputId": "5e66ff7f-cd3f-4930-ef2d-77781b6d18d7"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "\u001b[1mModel: \"sequential\"\u001b[0m\n"
+            ],
+            "text/html": [
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">Model: \"sequential\"</span>\n",
+              "</pre>\n"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
+              "┃\u001b[1m \u001b[0m\u001b[1mLayer (type)                   \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1mOutput Shape          \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1m      Param #\u001b[0m\u001b[1m \u001b[0m┃\n",
+              "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
+              "│ embedding (\u001b[38;5;33mEmbedding\u001b[0m)           │ (\u001b[38;5;34m64\u001b[0m, \u001b[38;5;34m200\u001b[0m, \u001b[38;5;34m128\u001b[0m)         │       \u001b[38;5;34m640,000\u001b[0m │\n",
+              "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
+              "│ lstm (\u001b[38;5;33mLSTM\u001b[0m)                     │ (\u001b[38;5;34m64\u001b[0m, \u001b[38;5;34m128\u001b[0m)              │       \u001b[38;5;34m131,584\u001b[0m │\n",
+              "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
+              "│ dense (\u001b[38;5;33mDense\u001b[0m)                   │ (\u001b[38;5;34m64\u001b[0m, \u001b[38;5;34m1\u001b[0m)                │           \u001b[38;5;34m129\u001b[0m │\n",
+              "└─────────────────────────────────┴────────────────────────┴───────────────┘\n"
+            ],
+            "text/html": [
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
+              "┃<span style=\"font-weight: bold\"> Layer (type)                    </span>┃<span style=\"font-weight: bold\"> Output Shape           </span>┃<span style=\"font-weight: bold\">       Param # </span>┃\n",
+              "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
+              "│ embedding (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Embedding</span>)           │ (<span style=\"color: #00af00; text-decoration-color: #00af00\">64</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">200</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">128</span>)         │       <span style=\"color: #00af00; text-decoration-color: #00af00\">640,000</span> │\n",
+              "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
+              "│ lstm (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">LSTM</span>)                     │ (<span style=\"color: #00af00; text-decoration-color: #00af00\">64</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">128</span>)              │       <span style=\"color: #00af00; text-decoration-color: #00af00\">131,584</span> │\n",
+              "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
+              "│ dense (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                   │ (<span style=\"color: #00af00; text-decoration-color: #00af00\">64</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">1</span>)                │           <span style=\"color: #00af00; text-decoration-color: #00af00\">129</span> │\n",
+              "└─────────────────────────────────┴────────────────────────┴───────────────┘\n",
+              "</pre>\n"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "\u001b[1m Total params: \u001b[0m\u001b[38;5;34m2,315,141\u001b[0m (8.83 MB)\n"
+            ],
+            "text/html": [
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Total params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">2,315,141</span> (8.83 MB)\n",
+              "</pre>\n"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "\u001b[1m Trainable params: \u001b[0m\u001b[38;5;34m771,713\u001b[0m (2.94 MB)\n"
+            ],
+            "text/html": [
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Trainable params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">771,713</span> (2.94 MB)\n",
+              "</pre>\n"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "\u001b[1m Non-trainable params: \u001b[0m\u001b[38;5;34m0\u001b[0m (0.00 B)\n"
+            ],
+            "text/html": [
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Non-trainable params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">0</span> (0.00 B)\n",
+              "</pre>\n"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "\u001b[1m Optimizer params: \u001b[0m\u001b[38;5;34m1,543,428\u001b[0m (5.89 MB)\n"
+            ],
+            "text/html": [
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Optimizer params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">1,543,428</span> (5.89 MB)\n",
+              "</pre>\n"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# compile the model\n",
+        "model.compile(optimizer=\"adam\", loss=\"binary_crossentropy\", metrics=[\"accuracy\"])"
+      ],
+      "metadata": {
+        "id": "6B1XegIpcZ0h"
+      },
+      "execution_count": 13,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Training the Model**"
+      ],
+      "metadata": {
+        "id": "-FJzLTuGGGZd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.fit(X_train, Y_train, epochs=5, batch_size=64, validation_split=0.2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kHYhToBkGFmH",
+        "outputId": "2fe493c0-eaf5-4228-e2f2-22b6dbf24d62"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/5\n",
+            "\u001b[1m500/500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m214s\u001b[0m 412ms/step - accuracy: 0.7520 - loss: 0.5125 - val_accuracy: 0.8711 - val_loss: 0.3199\n",
+            "Epoch 2/5\n",
+            "\u001b[1m500/500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m201s\u001b[0m 402ms/step - accuracy: 0.8896 - loss: 0.2841 - val_accuracy: 0.8712 - val_loss: 0.3146\n",
+            "Epoch 3/5\n",
+            "\u001b[1m500/500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m200s\u001b[0m 400ms/step - accuracy: 0.9106 - loss: 0.2374 - val_accuracy: 0.8721 - val_loss: 0.3116\n",
+            "Epoch 4/5\n",
+            "\u001b[1m500/500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m198s\u001b[0m 397ms/step - accuracy: 0.9148 - loss: 0.2184 - val_accuracy: 0.8695 - val_loss: 0.3352\n",
+            "Epoch 5/5\n",
+            "\u001b[1m500/500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m200s\u001b[0m 399ms/step - accuracy: 0.9258 - loss: 0.1914 - val_accuracy: 0.8659 - val_loss: 0.3647\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.src.callbacks.history.History at 0x7f7a2b170e00>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Model Evaluation**"
+      ],
+      "metadata": {
+        "id": "ffOI42MtGT-p"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "loss, accuracy = model.evaluate(X_test, Y_test)\n",
+        "print(f\"Test Loss: {loss}\")\n",
+        "print(f\"Test Accuracy: {accuracy}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "a0G99hOyGW8v",
+        "outputId": "eaacd83d-b0c5-432f-8bed-fa8156b3808f"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m37s\u001b[0m 117ms/step - accuracy: 0.8738 - loss: 0.3334\n",
+            "Test Loss: 0.3360520601272583\n",
+            "Test Accuracy: 0.8748000264167786\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Building a Predictive System**"
+      ],
+      "metadata": {
+        "id": "wAjxsEkqGZ48"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def predict_sentiment(review):\n",
+        "  # tokenize and pad the review\n",
+        "  sequence = tokenizer.texts_to_sequences([review])\n",
+        "  padded_sequence = pad_sequences(sequence, maxlen=200)\n",
+        "  prediction = model.predict(padded_sequence)\n",
+        "  sentiment = \"positive\" if prediction[0][0] > 0.5 else \"negative\"\n",
+        "  return sentiment"
+      ],
+      "metadata": {
+        "id": "QZOcph7kGdh5"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Usage examples**"
+      ],
+      "metadata": {
+        "id": "vkHjOfC4GtWb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# example usage\n",
+        "new_review = \"This movie was fantastic. I loved it.\"\n",
+        "sentiment = predict_sentiment(new_review)\n",
+        "print(f\"The sentiment of the review is: {sentiment}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7QVd3PGSGh0I",
+        "outputId": "d12f519d-9fb9-43c7-f4f2-9f96a99a3832"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 423ms/step\n",
+            "The sentiment of the review is: positive\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# example usage\n",
+        "new_review = \"This movie was not that good\"\n",
+        "sentiment = predict_sentiment(new_review)\n",
+        "print(f\"The sentiment of the review is: {sentiment}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2grGYP0oGjrr",
+        "outputId": "91c799ad-5ec3-4cb3-f3d8-8b99b40bb54e"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 126ms/step\n",
+            "The sentiment of the review is: positive\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# example usage\n",
+        "new_review = \"This movie was ok but not that good.\"\n",
+        "sentiment = predict_sentiment(new_review)\n",
+        "print(f\"The sentiment of the review is: {sentiment}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fqUXmxb8GwzG",
+        "outputId": "6184b7ec-a5a4-44fe-cc53-b6866fb15329"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 125ms/step\n",
+            "The sentiment of the review is: positive\n"
+          ]
+        }
+      ]
     }
   ]
 }
